fix post page layout (#5)
* fix layout bug

* unify list indent depending on device

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -49,7 +49,11 @@ blockquote {
 }
 
 ul, ol {
-  padding-left: 20px;
+  margin-left: 0;
+}
+
+li {
+  margin-left: 20px;
 }
 
 .footnotes {
@@ -101,6 +105,7 @@ button {
   z-index: 10;
   padding: 0 20px 0;
   margin-left: 0;
+  width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
